--- a/index.html
+++ b/index.html
@@ -10,10 +10,11 @@
     <link rel="stylesheet" href="node_modules/font-awesome/css/font-awesome.min.css" />
 
     <link rel="stylesheet" href="css/styles.css">
-    <title>Document</title>
+    <title>Ng Cry Cleaners</title>
+    <link rel="icon" type="image/x-icon" href="images/favicon.ico">
 </head>
 <body>
-    <div class="container">
+    <!-- <div class="container">
         <div class="row">
             <div class="col">1</div>
             <div class="col">2</div>
@@ -28,7 +29,7 @@
             <div class="col">11</div>
             <div class="col">12</div>
         </div>
-    </div>
+    </div> -->
     <nav class="navbar navbar-expand-md navbar-dark sticky-top" id="navbar">
         <a class="navbar-brand" href="index.html">
             <img src="images/NG Dry Cleaners Logo.png" alt="Navbar Logo" height="45">
@@ -44,7 +45,7 @@
                 <li class="nav-item text-center"><a class="nav-link active" href="index.html">Home</a></li>
                 <li class="nav-item text-center"><a class="nav-link" href="aboutus.html">About</a></li>
                 <li class="nav-item text-center"><a class="nav-link" href="services.html">Services</a></li>
-                <li class="nav-item text-center"><a class="nav-link" href="contactus.html">Contact Us</a></li>
+                <li class="nav-item text-center"><a class="nav-link" href="locations.html">Our Locations</a></li>
             </ul>
 
         </div>
@@ -55,19 +56,70 @@
             <div class="row">
                 <div class="col">
                     <div class="justify-content-center align-items-center text-center">
-                        <div class="text-white">
+                        <div id="jumboMessage" class="text-white">
                             <h1 class="my-3" id="jumboH1">Ng Dry Cleaners</h1>
-                            <h4 class="mb-4">Keeping Curaçao's wardrobe clean since 1961</h4>
-                            <a class="mb-3 btn btn-outline-light btn-lg" href="services.html" id="ourServicesBtn">
-                                Our Services
-                            </a>
-                        </div>
-                        
+                            <hr>
+                            <h4 id="jumboH4" class="mb-4">Keeping Curaçao's wardrobe clean since 1962</h4>
+                        </div> 
                     </div>
                 </div>
             </div>
         </div>
     </header>
+
+    <div class="container my-5">
+        <div class="row">
+            <h1 class="my-5">We are Ng Dry Cleaners</h1>
+        </div>
+        <div class="row">
+            <div class="col">
+                    <p>After opening the laundry July of 1962, <span id="important">Sau Kim Ng</span> lost her husband - but not her hope. Also known to many as <span id="important">Señora Ng</span>, she continued to work tirelessly as an entrepeneur, as a widow, and as a mother. <br>After her death in 2016, her children continued running the laundry with the same spirit and quality their mother did. <span id="important">Sau Kim</span>  continues to inspire the laundry today by using quality products and family to keep <span id="important">Curaçao's clothing sharp</span>. 
+                    </p>
+                    <a href="aboutus.html" class="btn btn-lg mb-4" id="btnSuccess"role="button">More</a>
+            </div>
+            <div class="col-md-7">
+                <figure>
+                    <img class="img-fluid float-right img-thumbnail mr-auto" src="images/Lalang.png" alt="">
+                    <figcaption class="figure-caption text-center text-md-right text-lg-right">Sau Kimg Ng</figcaption>
+                </figure> 
+            </div>           
+        </div>
+        <div class="row my-5">
+            <div class="col">
+                <h1 class="my-5">Our Services</h1>
+                <div id="carouselServices" class="carousel slide" data-ride="carousel">
+                    <ol class="carousel-indicators">
+                        <li data-target="#carouselServices" data-slide-to="0" class="active"></li>
+                        <li data-target="#carouselServices" data-slide-to="1"></li>
+                    </ol>
+                    <div class="carousel-inner">
+                        <div class="carousel-item active">
+                            <img class="d-block w-100" src="images/pexels-pavel-danilyuk-6461522.jpg" alt="">
+                            <div class="carousel-caption d-none d-md-block rounded">
+                                <h5>Button Fixes and Alterations</h5>
+                                <p>We do button fixes and alterations on Suits, Button Downs, and Jeans</p>
+                            </div>
+                        </div>
+                        <div class="carousel-item">
+                            <img class="d-block h-75 w-100" src="images/pexels-sharon-mccutcheon-4049148 .jpg">
+                            <div class="carousel-caption d-none d-md-block rounded">
+                                <h5>Wash and Fold</h5>
+                                <p>We do button fixes shirts and Jeans</p>
+                            </div>
+                        </div>  
+                    </div>
+                    <a class="carousel-control-prev" href="#carouselServices" role="button" data-slide="prev">
+                        <span class="carousel-control-prev-icon" aria-hidden="true"></span>
+                        <span class="sr-only">Previous</span>
+                    </a>
+                    <a class="carousel-control-next" href="#carouselServices" role="button" data-slide="next">
+                        <span class="carousel-control-next-icon" aria-hidden="true"></span>
+                        <span class="sr-only">Previous</span>
+                    </a>
+                </div>
+            </div>
+        </div>
+    </div>
 
     <footer class="text-center text-lg-start text-light" id=footer>
         <div class="container">
@@ -85,9 +137,13 @@
                         <dd><i class="fa fa-address-card"></i> Winston Churchillweg 163, Willemstad, Curaçao</dd>
                         <dt>Hong Kong Dry Cleaners: </dt>
                         <dd><i class="fa fa-address-card"></i> Roodeweg 230, Willemstad, Curaçao</dd>
+                    
+                </div>
+                <div class="col-md-4 col-xl-3 mt-5">
                     <dl class="addressList">
                         <dt>Email: </dt>
                         <dd><i class="fa fa-google"></i> ngdrycleanerscw@gmail.com</dd>
+                    </dl>
                     <dl class="addressList">
                         <dt>Phone:</dt>
                         <dt> Antilles Dry Cleaners: </dt>
@@ -96,32 +152,26 @@
                         <dd><i class="fa fa-phone"></i> +599 9 4626299</dd>
                     </dl>
                 </div>
-                <div class="col-md-4 col-xl-3 mt-4">
-                    <h5>Links</h5>
-                    <ul class="navList">
-                        <li>
-                            <a href="aboutus.html">About</a>
-                        </li>
-                        <li>
-                            <a href="services.html">Services</a>
-                        </li>
-                        <li>
-                            <a href="contactus.html">Contact Us</a>
-                        </li>
-                        <li>
-                            <i class="fa fa-facebook fa-lg">
-                                <a href="#">Facebook</a>
-                            </i>
-                            <i class="fa fa-instagram fa-lg">
-                                <a href="#">Instagram</a>
-                            </i>
-                        </li>
-                    </ul>
+            </div>
+            <div class="row my-3">
+                <div class="col-md-6">
+                    <div class="block">
+                        <i class="fa fa-facebook fa-lg">
+                            <a href="#">Facebook</a>
+                        </i>
+                    </div> 
+                </div>
+                <div class="col-md-6">
+                    <div class="block">
+                        <i class="fa fa-instagram fa-lg">
+                            <a href="#">Instagram</a>
+                        </i>
+                    </div>
                 </div>
             </div>
             <div class="row">
                 <div class="col">
-                    <p class="copyrights"><span>©</span><span class="copyrightYear">2022</span><span> </span><span>Ng Dry Cleaners</span><span>. </span><span>All Rights Reserved.</span></p>
+                    <p class="copyrights"><span>©</span><span class="copyrightYear">2022</span><span> </span><span>Ng Dry Cleaners</span><span>. </span><span>All Rights Reserved.</span></p>
 
                 </div>
             </div>
